[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "baserow"
authors = [{ name = "Bram Wiepjes (Baserow)", email = "bram@baserow.io" }]
#summary = "Baserow: open source no-code database backend."
description = """Baserow is an open source no-code database tool and Airtable \
                    alternative. Easily create a relational database without any \
                    technical expertise. Build a table and define custom fields \
                    like text, number, file and many more."""
# mixed license actually
license = { file = "LICENSE" }
requires-python = ">=3.11"
dynamic = ["version", "dependencies"]
classifiers = []

[project.urls]
Homepage = "https://baserow.io"
"Bug Tracker" = "https://gitlab.com/baserow/baserow/-/issues/"
Documentation = "https://baserow.io/user-docs"
Support = "https://community.baserow.io/"
Changelog = "https://gitlab.com/baserow/baserow/-/issues/"


[project.scripts]
baserow = "baserow.manage:main"

[tool.black]
exclude = """
/(
  | migrations
  | generated
)/
"""
# ensure consistent formatting for black
# see https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#required-version
# see https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#target-version
target-version = ["py311"]
required-version = "23"

[tool.setuptools]
include-package-data = true
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
platforms = ["Linux"]

#[tool.setuptools.package-data]
#baserow.data.templates = ["*"]

[tool.setuptools.packages.find]
namespaces = true
where = ["src/"]
include = ["baserow", "baserow.*"]

[tool.setuptools.dynamic]
# version always from the code
version = { attr = "baserow.version.VERSION" }
dependencies = { file = ["deps/base.txt"] }
