[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "baserow-enterprise"
authors = [{ name = "Bram Wiepjes (Baserow)", email="bram@baserow.io" }]
description="""Baserow is an open source no-code database tool and Airtable \
                    alternative. Easily create a relational database without any \
                    technical expertise. Build a table and define custom fields \
                    like text, number, file and many more."""
# mixed license
license={file="LICENSE"}
requires-python=">=3.11"
version = "1.30.1"
classifiers = []

[project.urls]
Homepage = "https://baserow.io"
"Bug Tracker" = "https://gitlab.com/baserow/baserow/-/issues/"
Documentation = "https://baserow.io/user-docs"
Support = "https://community.baserow.io/"
Changelog = "https://gitlab.com/baserow/baserow/-/issues/"

[tool.black]
exclude = '''
/(
  | migrations
  | generated
)/
'''

[tool.setuptools]
include-package-data = true
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
platforms = ["Linux"]

[tool.setuptools.packages.find]
where = ["src/"]
include = ["baserow_enterprise", "baserow_enterprise.*"]



